[package]
name = "openmaths"
version = "0.1.1"
authors = ["Vishwajeet Mane <manevishwajeet1@gmail.com>"]
description = "Powerful Maths Library for Graphical Applications"
license = "MIT/Apache-2.0"
repository = "https://github.com/OpenGeometry-io/OpenMaths"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.127"
